--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,8 +5,8 @@
 
 # Appearance
 
-theme: minimal
-day_night: true
+theme: mtj
+day_night: false
 font: ''
 font_size: L
 
@@ -20,8 +20,8 @@ twitter: 'https://twitter.com/JacksonMattT'
 
 # Contact (edit or remove options as required)
 
-email: matthew [at] hmjackson [dot] com
-phone: +44 7817 664800
+email: jackson [at] robots.ox.ac.uk
+# phone:
 address:
   street: Balliol College
   city: Oxford
