--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -15,8 +15,8 @@ font_size: L
 site_type: Person
 local_business_type: ''
 org_name: ''
-description: ''
-twitter: 'https://twitter.com/JacksonMattT'
+description: 'DPhil student in Autonomous Intelligent Machines and Systems at the University of Oxford, researching generalisation in reinforcement learning.'
+twitter: 'JacksonMattT'
 
 # Contact (edit or remove options as required)
 
