--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -26,7 +26,7 @@ address:
   street: Balliol College
   city: Oxford
   # region: CA
-  postcode: 'OX1 3BJ'
+  # postcode: 'OX1 3BJ'
   country: United Kingdom
   country_code: UK
 # coordinates:
