--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -22,13 +22,13 @@ twitter: 'JacksonMattT'
 
 email: jackson [at] robots.ox.ac.uk
 # phone:
-address:
-  street: Balliol College
-  city: Oxford
+# address:
+  # street: Balliol College
+  # city: Oxford
   # region: CA
   # postcode: 'OX1 3BJ'
-  country: United Kingdom
-  country_code: UK
+  # country: United Kingdom
+  # country_code: UK
 # coordinates:
 #   latitude: '37.4275'
 #   longitude: '-122.1697'
